--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,11 @@ a:hover {
     transition: all 0.5s ease;
   }
   a {
-    line-height: 1.6rem;
+    line-height: 2rem;
     font-size: 1rem;
   }
+a:hover {
+  color: red;
+  font-size: 1.5rem;
+}
 }
